--- a/assets/jade/views/contacto.jade
+++ b/assets/jade/views/contacto.jade
@@ -13,6 +13,7 @@ html(lang='es-PE')
 					.hidden-sm.col-md-2.asidebanner
 						+jpg("banner_left")
 					.col-md-12
+						+htmlnav(linkhtml)
 						+jpg("banner-header")
 						section#contacto
 							.row
