--- a/assets/jade/views/blogs.jade
+++ b/assets/jade/views/blogs.jade
@@ -14,6 +14,7 @@ html(lang='es-PE')
 					.hidden-sm.col-md-2.asidebanner
 						+jpg("banner_left")
 					.col-md-12
+						+htmlnav(linkhtml)
 						+jpg("banner-header")
 						section#blogs
 							+section("Blogs", "LO ÚLTIMO EN BLOGS")
