--- a/assets/jade/views/home.jade
+++ b/assets/jade/views/home.jade
@@ -13,6 +13,7 @@ html(lang='es-PE')
 					.hidden-sm.col-md-2.asidebanner
 						+jpg("banner_left")
 					.col-md-12
+						+htmlnav(linkhtml)
 						+jpg("banner-header")
 						h1.text-center GUERRA EN LA MUNICIPALIDAD DE LIMA METROPOLITANA
 						ul.social-list.list-unstyled
